<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="${packageName}.${activityClass}" >

    <LinearLayout
        android:id="@+id/linearLayout0"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true" >

        <TextView
            android:id="@+id/textViewInterface"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/device_interface"/>

        <Spinner
            android:id="@+id/spinnerInterfaces"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/linearLayout0" >

        <TextView
            android:id="@+id/textViewIP"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ip" />

        <EditText
            android:id="@+id/editTextIP"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="phone" />

        <TextView
            android:id="@+id/textViewPort"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/port" />

        <EditText
            android:id="@+id/editTextPort"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="number" />

        <ToggleButton
            android:id="@+id/toggleButtonUDP"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/udp"
            android:textOff="@string/udp_off"
            android:textOn="@string/udp_on" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/linearLayout1" >

        <ToggleButton
            android:id="@+id/toggleSENDER"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text="@string/sender"
            android:textOff="@string/sender_off"
            android:textOn="@string/sender_on" />

        <ToggleButton
            android:id="@+id/toggleRECEIVER"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text="@string/receiver"
            android:textOff="@string/receiver_off"
            android:textOn="@string/receiver_on" />

    </LinearLayout>

    <TextView
        android:id="@+id/textViewConsole"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/linearLayout2"
        android:text="@string/console" 
        android:background="@android:color/black"
        android:textColor="@android:color/white"/>

</RelativeLayout>